# calendar-tidy

./: .gitignore  Cargo.toml  README.md  calendar-tidy.example.yaml  flake.nix
.github/workflows/: promote.yaml  push.yml  release.yml
snap/: snapcraft.yaml
src/: config.rs  event.rs  main.rs
src/clients/: google_calendar.rs  mod.rs
src/filters/: all_day.rs  colour.rs  mod.rs  pattern.rs
