[package]
name = "calendar-tidy"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
cli-table = "0.5.0"
confy = { version = "2.0.0", features = [
    "yaml_conf",
], default-features = false }
google-calendar3 = "*"
inquire = "0.9.4"
regex = "1.12.3"
serde = { version = "1", features = ["derive"] }
serde_regex = "1.1.0"
tokio = { version = "1.52", features = ["full"] }
xdg = "2.5.2"
